--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,24 +18,24 @@ jobs:
       - run: npm run nx affected -- --target=test --base=origin/master --parallel
       - run: npm run nx affected -- --target=lint --base=origin/master --parallel
       - run: npm run nx affected -- --target=e2e --base=origin/master --parallel
-      - run: npx nx-cloud stop-all-agents
+      - run: npx @nrwl/nx-cloud stop-all-agents
   agent1:
     runs-on: ubuntu-latest
     steps:
-      - run: npx nx-cloud start-agent
+      - run: npx @nrwl/nx-cloud start-agent
   agent2:
     runs-on: ubuntu-latest
     steps:
-      - run: npx nx-cloud start-agent
+      - run: npx @nrwl/nx-cloud start-agent
   agent3:
     runs-on: ubuntu-latest
     steps:
-      - run: npx nx-cloud start-agent
+      - run: npx @nrwl/nx-cloud start-agent
   agent4:
     runs-on: ubuntu-latest
     steps:
-      - run: npx nx-cloud start-agent
+      - run: npx @nrwl/nx-cloud start-agent
   agent5:
     runs-on: ubuntu-latest
     steps:
-      - run: npx nx-cloud start-agent
+      - run: npx @nrwl/nx-cloud start-agent
