--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,20 +22,30 @@ jobs:
   agent1:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
   agent2:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
   agent3:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
   agent4:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
   agent5:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
