--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nrwl/angular": "12.3.5",
+    "@nrwl/nx-cloud": "^12.1.3",
     "core-js": "^3.6.5",
     "document-register-element": "1.13.1",
     "react": "17.0.2",
