--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: bahmutov/npm-install@1.4.5
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
       
   agent2:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: bahmutov/npm-install@1.4.5
+      - uses: bahmutov/npm-install@v1.4.5
       - run: npx @nrwl/nx-cloud start-agent
