--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on: [pull_request]
 env:
   NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
   NX_BRANCH: ${{ github.event.number }}
-  NX_RUN_GROUP: ${{ github.run.id }}
+  NX_RUN_GROUP: ${{ github.run_id }}
 
 jobs:
   build:
