--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,11 @@ name: Run CI checks
 
 on: [pull_request]
 
+env:
+  NX_CLOUD_DISTRIBUTED_EXECUTION: 'true'
+  NX_BRANCH: ${{ github.event.number }}
+  NX_RUN_GROUP: ${{ github.run_id }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,3 +18,17 @@ jobs:
       - run: npm run nx affected -- --target=lint --base=origin/master --parallel
       - run: npm run nx affected -- --target=test --base=origin/master --parallel
       - run: npm run nx affected -- --target=e2e --base=origin/master --parallel
+      - run: npx @nrwl/nx-cloud stop-all-agents
+
+  agent1:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
+      - run: npx @nrwl/nx-cloud start-agent
+  agent2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: bahmutov/npm-install@v1.4.5
+      - run: npx @nrwl/nx-cloud start-agent
